[package]
name = "sila"
version = "0.3.1"
description = "A command line multiplexer" 
edition = "2018"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity"]
repository = "https://github.com/alxolr/sila"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_yaml = "0.8.17"
serde = { version = "1.0", features = ["derive"] }
structopt = "0"
enum-iterator = "0"
